Improve display of current subscription message

--- a/css/style.css
+++ b/css/style.css
@@ -79,3 +79,9 @@
 .sub-icon-unknown {
     color: #530E53;
 }
+.subProdListItemExpMsg {
+    float:right;
+    text-align:right;
+    font-style: italic;
+    clear: both;
+}
