--- a/css/style.css
+++ b/css/style.css
@@ -37,49 +37,34 @@
     color: red;
 }
 
-.subProdListItem {
+.subPlanListItem {
     padding:10px;
     clear:both;
     overflow: hidden;
     border-bottom-width: thin;
     border-bottom-style: solid;
 }
-.subProdListItemID {
+.subPlanListItemID {
     float:left;
 }
-.subProdListItemInfo {
+.subPlanListItemInfo {
     display: inline;
     float: left;
 }
 
-.subProdListItemBtn {
+.subPlanListItemBtn {
     float:right;
     margin-right:5%;
     text-align:left;
 }
 
-.subProdListHeader {
+.subPlanListHeader {
     overflow: hidden;
     border-bottom-width: thin;
     border-bottom-style: solid;
 }
 
-.sub-icon-ok {
-    color: green;
-}
-.sub-icon-danger {
-    color: red;
-}
-.sub-icon-warning {
-    color: #FFD300;
-}
-.sub-icon-info {
-    color: #0077dd;
-}
-.sub-icon-unknown {
-    color: #530E53;
-}
-.subProdListItemExpMsg {
+.subPlanListItemExpMsg {
     float:right;
     text-align:right;
     font-style: italic;
